--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-geocode": "^0.2.0",
+    "node-ipinfo": "^3.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
