--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "node-geocode": "^0.2.0",
-    "node-ipinfo": "^3.5.1"
+    "node-ipinfo": "^3.5.1",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
