--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "node-geocode": "^0.2.0",
     "node-ipinfo": "^3.5.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
